--- a/index.html
+++ b/index.html
@@ -65,11 +65,118 @@
               </li>
             </ul>
             <ul class="header__navbar-list">
-              <li class="header__navbar-item">
+              <li class="header__navbar-item notification">
                 <a href="" class="header__navbar-item-link">
                   <i class="header__navbar-icon fa-solid fa-bell"></i>
                   Thông báo
                 </a>
+                <!-- tooltip notification -->
+
+                <div class="header__notify">
+                  <header class="header__notify-header">
+                    <h3>Thông báo mới nhất</h3>
+                  </header>
+                  <ul class="header__notify-list">
+                    <li class="header__notify-item viewed">
+                      <a href="" class="header__notify-link">
+                        <img
+                          src="./assets/img/notify1.png"
+                          alt="notification 1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <strong>
+                            <span class="header__notify-name"
+                              >Tặng ngay combo 5 gói rửa mặt thải độc</span
+                            >
+                          </strong>
+                          <span class="header__notify-description"
+                            >Khuyến mãi siêu hot</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item viewed">
+                      <a href="" class="header__notify-link">
+                        <img
+                          src="./assets/img/notify1.png"
+                          alt="notification 1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <strong>
+                            <span class="header__notify-name"
+                              >Tặng ngay combo 5 gói rửa mặt thải độc</span
+                            >
+                          </strong>
+                          <span class="header__notify-description"
+                            >Khuyến mãi siêu hot</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item viewed">
+                      <a href="" class="header__notify-link">
+                        <img
+                          src="./assets/img/notify1.png"
+                          alt="notification 1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <strong>
+                            <span class="header__notify-name"
+                              >Tặng ngay combo 5 gói rửa mặt thải độc</span
+                            >
+                          </strong>
+                          <span class="header__notify-description"
+                            >Khuyến mãi siêu hot</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item viewed">
+                      <a href="" class="header__notify-link">
+                        <img
+                          src="./assets/img/notify1.png"
+                          alt="notification 1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <strong>
+                            <span class="header__notify-name"
+                              >Tặng ngay combo 5 gói rửa mặt thải độc</span
+                            >
+                          </strong>
+                          <span class="header__notify-description"
+                            >Khuyến mãi siêu hot</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                    <li class="header__notify-item viewed">
+                      <a href="" class="header__notify-link">
+                        <img
+                          src="./assets/img/notify1.png"
+                          alt="notification 1"
+                          class="header__notify-img"
+                        />
+                        <div class="header__notify-info">
+                          <strong>
+                            <span class="header__notify-name"
+                              >Tặng ngay combo 5 gói rửa mặt thải độc</span
+                            >
+                          </strong>
+                          <span class="header__notify-description"
+                            >Khuyến mãi siêu hot</span
+                          >
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                  <footer class="header__notify-footer">
+                    <a href="" class="header__notify-footer-btn">Xem tất cả</a>
+                  </footer>
+                </div>
               </li>
               <li class="header__navbar-item">
                 <a href="" class="header__navbar-item-link">
@@ -95,6 +202,13 @@
       <div class="container"></div>
 
       <footer class="footer"></footer>
+
+      <div class="modal">
+        <div class="modal__overlay"></div>
+        <div class="modal___body">
+          <div class="modal__inner"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
