--- a/index.html
+++ b/index.html
@@ -206,7 +206,63 @@
       <div class="modal">
         <div class="modal__overlay"></div>
         <div class="modal___body">
-          <div class="modal__inner"></div>
+          <div class="modal__inner">
+            <!-- form register/login -->
+
+            <div class="auth__form">
+              <div class="auth__form-header">
+                <h3 class="auth__form-heading">Đăng Ký</h3>
+                <span class="auth__form-switch-btn">Đăng nhập</span>
+              </div>
+              <div class="auth__form-form">
+                <div class="auth__form-group">
+                  <input
+                    type="text"
+                    class="auth__form-input"
+                    placeholder="Nhập email của bạn"
+                  />
+                </div>
+                <div class="auth__form-group">
+                  <input
+                    type="password"
+                    class="auth__form-input"
+                    placeholder="Mật khẩu của bạn"
+                  />
+                </div>
+                <div class="auth__form-group">
+                  <input
+                    type="password"
+                    class="auth__form-input"
+                    placeholder="Nhập lại mật khẩu"
+                  />
+                </div>
+              </div>
+
+              <div class="auth__form-aside">
+                <p class="auth__form-policy-text">
+                  Bằng việc đăng ký, bạn đã đồng í với shop về
+                  <a class="policy">Điều khoản dịch vụ</a> &
+                  <a class="policy">Chính sách bảo mật</a>
+                </p>
+              </div>
+
+              <div class="auth__controls">
+                <button class="btn">TRỞ LẠI</button>
+                <button class="btn btn-primary">ĐĂNG KÝ</button>
+              </div>
+
+              <div class="auth__socials">
+                <a class="btn btn-with-icon">
+                  <i class="fa-brands fa-square-facebook"></i>
+                  Kết nối với Facebook</a
+                >
+                <a class="btn btn-with-icon">
+                  <i class="fa-brands fa-square-google-plus"></i>
+                  Kết nối với Google</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
