sort and filter products

--- a/index.html
+++ b/index.html
@@ -239,7 +239,69 @@
         </div>
       </header>
 
-      <div class="container"></div>
+      <div class="container">
+        <div class="grid">
+          <div class="grid__row">
+            <div class="grid__column-2">
+              <nav class="category">
+                <h3 class="category__heading">
+                  <i class="category__heading-icon fa-solid fa-bars"></i>Danh
+                  mục
+                </h3>
+                <ul class="category-list">
+                  <li class="category-item category-item__active">
+                    <a href="#" class="category-item__link">Tran điểm mặt</a>
+                  </li>
+                  <li class="category-item">
+                    <a href="#" class="category-item__link">Tran điểm môi</a>
+                  </li>
+                  <li class="category-item">
+                    <a href="#" class="category-item__link">Tran điểm mắt</a>
+                  </li>
+                  <li class="category-item">
+                    <a href="#" class="category-item__link">Tran điểm mắt</a>
+                  </li>
+                  <li class="category-item">
+                    <a href="#" class="category-item__link">Tran điểm mắt</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+
+            <div class="grid__column-10">
+              <div class="home__filter">
+                <span class="home__filter-label">Sắp xếp theo</span>
+                <button class="btn btn_popular">Phổ biến</button>
+                <button class="btn btn-primary">Mới nhất</button>
+                <button class="btn btn_popular">Bán chạy</button>
+                <div class="filter__select-input">
+                  <span class="select-input-label">Gía</span>
+                  <i class="select-input-icon fa-solid fa-chevron-down"></i>
+                  <ul class="filter-sort">
+                    <li class="item-sort">Gía: thấp đến cao</li>
+                    <li class="item-sort">Gía: cao xuống thấp</li>
+                  </ul>
+                </div>
+
+                <div class="home-filter__page">
+                  <span class="home-filter__page-number">
+                    <span class="page-number">1</span>
+                    /14
+                  </span>
+                  <div class="home-filter__page-controls">
+                    <a href="#" class="home-filter__page-btn">
+                      <i class="fa-solid fa-angle-left"></i>
+                    </a>
+                    <a href="#" class="home-filter__page-btn"
+                      ><i class="fa-solid fa-angle-right"></i
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <footer class="footer"></footer>
 
